# uvx-init-fastapi

./: README.md  clean.sh  pyproject.toml
init_fastapi/: cli.py
init_fastapi/templates/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
